@startuml

skinparam classAttributeIconSize 0
hide empty methods
hide empty attributes

class Client {}

class Container {
   -containerId
   -payload
   -tare
   -gross
   -isoCode
}

class CargoManifest {
    -cargoManifestId
    -containerId
}

class Ship {
    -mmsiCode
    -shipName
    -imoCode
    -vesselTypeId
    -callSignId
    -cargo
    -draft
    -length
    -width
}

class ShipTrip{
    -shipMmsi
    /'has attribute phase?'/
    -departure_location_id
    -arrival_location_id
    -loading_cargo_id
    -unloading_cargo_id
    -est_departure_date
    -est_arrival_date
    -real_departure_date
    -real_arrival_date
}

class Port {
    -identification
    -name
    -continent
    -country
    -lat
    -lon
}

Client "1" -- "1..*" Container : ships >
Container "1..*"-- "2..*" CargoManifest : associated with >
Ship "1" -- "1..*" Container : transports >
CargoManifest -- Port : delivered at >
Ship "1" -- "*" ShipTrip : does >
ShipTrip "*" -- "1" Port : to >
ShipTrip "1" -- "2" CargoManifest : relates to >


@enduml